<resources>
    <string name="app_name">module_usercenter</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="goto_register">注册账号</string>
    <string name="login">登录</string>
    <string name="user_register">用户注册</string>
    <string name="register">注册</string>
    <string name="default_nick_name">玩Android儿</string>


    <string name="view_pager">View Pager</string>
    <string name="entrance">Entrance</string>
    <string name="toolbar">Toolbar</string>
    <string name="entrance_secondary_text">Display a complex entrance animation when entering a screen</string>
    <string name="view">View</string>
    <string name="toolbar_secondary_text">Display a complex collapsing toolbar with insets</string>
    <string name="star_background_content_description">Star background</string>
    <string name="prepare_to_launch">launch</string>
    <string name="about_app_title">关于App</string>
    <string name="about_app_desc">App创作的想法及完成情况</string>
    <string name="about_app_icon">🐯</string>
    <string name="about_desc">玩Android</string>
    <string name="about_subdesc">更多信息请点击下方链接</string>
    <string name="about_me_icon">🚀</string>
    <string name="about_me_title">关于我</string>
    <string name="about_me_desc">在哪可以找到我等信息</string>
    <string name="app_version_desc">V1.0</string>
    <string name="app_version_icon">👾</string>
    <string name="app_version_title">App 版本</string>
    <string name="view_pager_text">View Pager</string>
    <string name="pager_secondary_text">Display a dynamic header driven by a ViewPager</string>
    <string name="view_pager_sample_preview">View pager sample preview</string>
    <string name="entrace_sample_preview">Entrace sample preview</string>
    <string name="collapsing_toolbar_screen_preview">Collapsing toolbar screen preview</string>
    <string name="star_background">star background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
