<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/gray_f5"
		tools:context=".ui.register.RegisterActivity">
	<View
			android:id="@+id/fake_status_bar"
			android:layout_width="match_parent"
			android:layout_height="@dimen/statusbar_view_height"
			android:background="@color/colorPrimary"/>
	<include layout="@layout/layout_toolbar" />

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="10dp"
			android:background="@android:color/white"
			android:orientation="vertical"
			android:paddingLeft="20dp"
			android:paddingRight="20dp">

		<EditText
				android:id="@+id/et_register_username"
				style="@style/RegisterEditTextStyle"
				android:layout_marginTop="20dp"
				android:drawablePadding="10dp"
				android:hint="@string/please_input_username"
				android:imeOptions="actionNext"/>


		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/gray_ea" />

		<EditText
				android:id="@+id/et_register_password"
				style="@style/RegisterEditTextStyle"
				android:layout_marginTop="20dp"
				android:drawablePadding="10dp"
				android:hint="@string/please_input_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword" />

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/gray_ea" />

		<EditText
				android:id="@+id/et_register_repassword"
				style="@style/RegisterEditTextStyle"
				android:layout_marginTop="20dp"
				android:drawablePadding="10dp"
				android:hint="@string/please_input_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword" />

		<Button
				android:id="@+id/btn_register"
				style="@style/PrimaryButtonStyle"
				android:text="@string/register" />

	</LinearLayout>
</LinearLayout>